fix: Prevent scroll overflow from showing the background image

--- a/src/Styles/index.scss
+++ b/src/Styles/index.scss
@@ -20,6 +20,8 @@ body {
   font-family: Montserrat, sans-serif;
   width: var(--website-width);
   margin: 0 auto;
+  overflow-x: hidden;
+  overscroll-behavior-y: none;
 }
 
 img {
@@ -69,12 +71,32 @@ a:focus-visible {
 main {
   min-height: 100vh;
   margin-top: 190px;
+  position: relative;
 }
 
 @include small {
   main {
     margin-top: 140px;
   }
+}
+
+main::before,
+main::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 301px;
+  background-color: var(--website-bg);
+}
+
+main::before {
+  top: -301px;
+  left: 0;
+}
+
+main::after {
+  bottom: -301px;
+  left: 0;
 }
 
 .container {
